--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,12 +8,13 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
-    - name: make
+    - name: Install Dependencies
+      run: sudo apt-get install libreadline-dev -y
+    - name: Build
       run: make
-    - name: make check
+    - name: Run Checks
       run: make check
